<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="user" type="com.ancestry.cemetery.View.Activity.MemorialInfoActivity"/>
    </data>
<android.support.design.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cemetery"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8dp"
                android:text="@string/first_name"
                android:textSize="@dimen/text_twenty"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8dp"
                android:textSize="@dimen/text_small" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#cfd8dc"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8dp"
                android:text="@string/last_name"
                android:textSize="@dimen/text_twenty"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8dp"
                android:textSize="@dimen/text_small" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#cfd8dc"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8dp"
                android:text="@string/middle_name"
                android:textSize="@dimen/text_twenty"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/middle_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8dp"
                android:textSize="@dimen/text_small" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#cfd8dc"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8dp"
                android:text="@string/birth_date"
                android:textSize="@dimen/text_twenty"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8dp"
                android:textSize="@dimen/text_small" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#cfd8dc"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8dp"
                android:text="@string/death_date"
                android:textSize="@dimen/text_twenty"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/death_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8dp"
                android:textSize="@dimen/text_small" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#cfd8dc"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8dp"
                android:text="@string/cemetery_name"
                android:textSize="@dimen/text_twenty"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/cemetery_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8dp"
                android:textSize="@dimen/text_small" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#cfd8dc"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8dp"
                android:text="@string/county"
                android:textSize="@dimen/text_twenty"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/county_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8dp"
                android:textSize="@dimen/text_small"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#cfd8dc"
                android:layout_marginTop="10dp" />

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>

</layout>